    non-debconf prompting and two debconf templates.
  * Only use ucf on purge when it's available.
  * Update debconf templates, eliminates two, changes some, introduces
    new line numbering from debconf-updatepo.

  [ Matej Vela ]
  * Rearrange find options in debian/postinst to prevent warnings.

  [ Lionel Elie Mamane ]
  * Don't ship C sources with documentation; there is no reason for it.

 --

mailman (1:2.1.8-2) unstable; urgency=low

  [ Thijs Kinkhorst ]
  * Add example apache.conf under /etc/mailman
    (Closes: #282460, #135148, #178543, #179253).
  * Update all man pages to be in line with current mailman functionality
    (Closes: #286607, #276952).
  * Add suggests on lynx (Closes: #296781).
  * Checked for policy 3.7.2, no changes necessary.
  * Add watch file.
  * Add LSB dependency info to init script.
  * Fix example in postfix-to-mailman.py to pass ${mailbox}, not ${user}
    (Closes: #305762).
  * Add Lintian overrides for those things that are legitimate.
  * Drop recommends on essential base-passwd >= a version from 1997.
  * Use apache2 instead of apache as the first alternative for httpd.
  * Move options to `find` in debian/rules to start of commandline to
    prevent warnings.

  [ Hector Garcia ]
  * Putting permision on archive/private to 770 www-data:list to prevent
    regular users from reading private lists. (Closes: #356877)
  * Changed '| xarg' for '-exec' on find to prevent problems when there are
    too many files (Closes: #366102)
  * Added a slash to the end of DEFAULT_URL_PATTERN on mm_cfg.py
    (Closes: #365881)
  * Documented on README.Debian the apache + suexec case. (Closes: #360905)
  * Updated Uploaders
  * Removed the find which deleted ../$(package)*dsc.asc. It is not needed.

  [ Riccardo Setti ]
  * epoch 1. Now people should upgrade mailman without problems. (closes: #366438)
  * Applied patch which fixes string search in admin.py. (closes: #359721)
  * Updated German debconf translation (closes: #353713)